# anki-ai-field-filler

./: .gitignore  AGENTS.md  LICENSE  Makefile  PITFALLS.md  README.md  __init__.py  ankiweb_listing.html  ankiweb_listing.md  browser_hooks.py  build.py  build_ankiaddon.py  config.json  config.json.example  config.md  config_manager.py  editor_hooks.py  field_filler.py  manifest.json  media_handler.py  output.txt  pyproject.toml  ruff_errors.txt  settings_io.py  test_failures.txt  verify_beautify.py
.github/: FUNDING.yml
.github/workflows/: cd.yml  ci.yml  release.yml
providers/: __init__.py  anthropic_provider.py  base.py  google_provider.py  http.py  openai_provider.py
src/: integration.py
src/api/: __init__.py  anthropic.py  base.py  google.py  google_provider.py  openai.py  openai_provider.py  vercel.py
src/core/: config.py  config_manager.py  factory.py  field_filler.py  filler.py  hooks.py  interfaces.py  media.py  media_handler.py  network.py  storage.py
src/ui/: __init__.py  batch_fill_dialog.py  batch_progress_dialog.py  batch_review_dialog.py  browser_batch_fill_dialog.py  browser_batch_progress.py  browser_batch_review.py  chat_panel.py  config_dialog.py  config_field_dialog.py  config_tab_general.py  config_tab_models.py  config_tab_note_type.py  editor_fill_dialog.py  editor_progress_dialog.py  editor_prompt_dialog.py  field_instruction_dialog.py  fill_dialog.py  general_settings_tab.py  generating_dialog.py  integration.py  note_type_settings_tab.py  provider_settings_tab.py  quick_prompt_dialog.py  settings_dialog.py  styles.py  theme.py  widgets.py
src/ui/browser/: fill_dialog.py  progress.py  review.py
src/ui/common/: icons.py  theme.py  widgets.py
src/ui/config/: dialog.py  field_dialog.py  tab_general.py  tab_models.py  tab_note_type.py
src/ui/editor/: editor.css  editor.js  fill_dialog.py  progress_dialog.py  prompt_dialog.py
src/ui/panels/: chat_panel.py
tests/: __init__.py  conftest.py  test_batch_fill.py  test_batch_review_dialog.py  test_config.py  test_factory.py  test_fetch_models.py  test_field_filler.py  test_filler.py  test_http.py  test_media.py  test_media_handler.py  test_network.py  test_prompt_builder.py  test_provider_generate.py  test_providers.py  test_settings_io.py  test_storage.py
ui/: __init__.py  batch_fill_dialog.py  batch_progress_dialog.py  batch_review_dialog.py  field_instruction_dialog.py  fill_dialog.py  general_settings_tab.py  generating_dialog.py  note_type_settings_tab.py  provider_settings_tab.py  quick_prompt_dialog.py  settings_dialog.py  styles.py
